syntax = "proto3";

option java_multiple_files = true;
option java_package = "me.rayll";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package me.rayll;

/**
service para cadastrar chave
 */
service KeyManagerService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

/**
service para remover a chave
 */
service KeyManagerRemoveService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

/**
remove a chave pix
 */

message RemoveChavePixRequest{
  string clientId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}

/**
registra a chave pix
 */
message RegistraChavePixRequest {
  string clientId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}



message  RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

enum TipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

/**
Fim cadastro da chave
 */